--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         
     </div>
 
-    <div class="main-container">
+    <div class="main-container">    
         <!--Screen-->
         <div class="result">
-                <input type="text" placeholder="0" class="screen" readonly>
+                <input id="inputText" class="inner-result" type="text" placeholder="0" >
+                <input id="output" class="inner-result" type="text" placeholder="Output" >
         </div>
         <!--Buttons -->
         <div class="buttons">
